--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -7,8 +7,8 @@ post:
   pin: 置顶
   readmore: 阅读全文
   readoriginal: 去源站阅读
-  wordcount: '字数：%s 字'
-  duration: '时长：%s 分钟'
+  wordcount: '%s 字'
+  duration: '%s 分钟'
   comments: 评论
   comments_load: 点击加载 %s 评论
   comments_check: 正在检查 %s 能否访问...
